[project]
name = "steam-update-inhibit-sleep"
version = "0.1.0"
description = "Don't worry about system suspending when Steam installs stuff"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbus-python>=1.4.0",
    "inotify-simple>=1.3.5",
    "vdf>=3.4",
]

[project.scripts]
steam-update-inhibit-sleep = "steam_update_inhibit_sleep:main"

[project.urls]
Repository = "https://github.com/Damglador/steam-update-inhibit-sleep.git"
Issues = "https://github.com/Damglador/steam-update-inhibit-sleep/issues"
